Fine tuning styles to get spacing correct
Just subtle little tweaks here and there

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -259,11 +259,11 @@ li:hover > .sub-menu {
     }
 }
 #interested-in-applying, #link-give {
-    width: 100%;
-	height: 43px;
+//    width: 100%;
+//	height: 43px;
     color: #fff;
-    padding: 12% 2em;
-    font-size: 16px;
+    padding: 13.5px 2em;
+//    font-size: 16px;
     .active & a {
         margin-left: unset;
     }
@@ -287,7 +287,7 @@ li:hover > .sub-menu {
         display: block;
     }
     .sub-menu {
-    	top: 2em;
+    	top: 1.6em;
 	    left: 0;
     }
 }
@@ -295,6 +295,7 @@ li:hover > .sub-menu {
     @extend .sub-menu;
     top: 4em;
     right: 0;
+    margin-top: 4px;
 }
 .search-item {
     padding-right: 20px;
@@ -331,6 +332,8 @@ li:hover > .sub-menu {
 	position: absolute;
 	right: 1px;
 	top: -3px;
+    border: unset;
+    background-color: unset;
 }
 .mobile-or-library {
     .active {
@@ -352,8 +355,12 @@ li:hover > .sub-menu {
         .menu-item-has-children > a {
             @include toggleIndicator;
             font-size: 2em;
+            &:after {
+                font-size:2em;
+            }
         }
         #primary-menu, #special-menu {
+            width: 96%;
             flex-direction: column;
             padding-left: 0;
             > li {
@@ -366,10 +373,6 @@ li:hover > .sub-menu {
                 }
             }
             li {
-                padding: unset;
-                flex-direction: column;
-                width: 100%;
-                text-align: left;
                 &:not(:last-child):after {
                     border-right: unset;
                 }
